--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,12 @@
   border-radius: 10%;
 }
 .navbar-brand {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .about {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-align: center;
+}
+.Home {
   text-align: center;
 }
